<resources>
    <string name="app_name" translatable="false">UDID</string>
    <string name="Ok">ok</string>
    <string name="login">LOGIN</string>
    <string name="date_of_birth">Date of Birth<font fgcolor="#FF3D00">*</font></string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="enrollment_number_udid_number">Enrollment Number/ UDID Number<font fgcolor="#FF3D00">*</font></string>
    <string name="please_enrollment_number_udid_number">Please enter Enrolment Number/ UDID Number</string>
    <string name="please_date_of_birth">Please enter date of birth</string>
    <string name="gender">Gender<font fgcolor="#FF3D00">*</font></string>
    <string name="choose_file">Choose File</string>
    <string name="no_file_chosen">No File Chosen</string>
    <string name="name_">Name</string>
    <string name="mobile_number_">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="personal_details">Personal \nDetails </string>
    <string name="proof_of_identity_card">Proof of \nIdentity Card</string>
    <string name="proof_of_correspondence_address">Address for \nCorrespondence</string>
    <string name="disability_details">Disability \nDetails</string>
    <string name="personal_details2">Personal Details</string>
    <string name="application_status">Application Status</string>
    <string name="mobile">Mobile</string>
    <string name="my_n_account">My Account</string>
    <string name="update_n_name">Update Name</string>
    <string name="update_aadhar_n_number">"Update Aadhaar Number"</string>
    <string name="update_date_n_of_birth">Update Date of Birth</string>
    <string name="update_n_email_id">Update Email ID</string>
    <string name="update_mobile_n_number">Update Mobile Number</string>
    <string name="surrender_n_card">Surrender Card</string>
    <string name="track_your_n_card">Track your Card</string>
    <string name="apply_for_n_re_issue">Apply for Renew</string>
    <string name="application_statuss">Application Status</string>
    <string name="download_application">Download Application</string>
    <string name="e_disability_certificate">Download your E-disability certificate</string>
    <string name="e_udid_card">Download your E-UDID card</string>
    <string name="unique_disability_id">Unique Disability ID</string>
    <string name="department_of_empowerment">Department of Empowerment of Person with Disabilities, Ministry of Social Justice and Epowerment, Govt.of India</string>
    <string name="pwd_login">PWD Login</string>
    <string name="pwd_applications_view">PWD Applications View</string>
    <string name="my_account">My Account</string>
    <string name="udid_number">UDID Number</string>
    <string name="udid_generation_date">UDID Generation Date</string>
    <string name="na">NA</string>
    <string name="name_of_application">Name Of Applicant</string>
    <string name="gender_">Gender</string>
    <string name="camera_permission">You need to enable camera access and storage permission to access this</string>
    <string name="date_of_birth_">Date Of Birth</string>
    <string name="disability_type">Disability Type</string>
    <string name="disability_percentage">Disability percentage</string>
    <string name="validity">Validity</string>
    <string name="address">Address</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="get_started">Get Started</string>
    <string name="date_of_issue">Date Of Issue</string>
    <string name="proof_of_identity_card_">Proof of Identity Card</string>
    <string name="hospital_for_assessment">Hospital For \nAssessment</string>
    <string name="year_of_birth">Year Of Birth</string>
    <string name="percentage_of_disability">Percentage Of Disability</string>
    <string name="valid_upto">Valid Upto</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="scan_for_details">Scan For Details</string>
    <string name="updated_aadhaar_number">Updated Aadhaar Number<font color="#FF0000">*</font></string>
    <string name="identity_proof">Identity Proof<font color="#FF0000">*</font></string>
    <string name="upload_document">Upload Document<font color="#FF0000">*</font></string>
    <string name="reason_to_update_aadhaar_number">Reason to update Aadhaar Number<font color="#FF0000">*</font></string>
    <string name="update_mobile_number">Update Mobile Number<font color="#FF0000">*</font></string>
    <string name="updated_date_of_birth">Updated Date of Birth<font color="#FF0000">*</font></string>
    <string name="reason_to_update_date_of_birth">Reason to Update Date of Birth<font color="#FF0000">*</font></string>
    <string name="updated_revised_email_id">Updated Revised Email ID<font color="#FF0000">*</font></string>
    <string name="reason_to_surrender_card">Reason to Surrender Card<font color="#FF0000">*</font></string>
    <string name="reason_to_update_lost_card_card_not_received">Reason to update Lost Card/Card Not Received<font color="#FF0000">*</font></string>
    <string name="name_star">Name <font color="#FF0000">*</font></string>
    <string name="email_id_star">Email ID <font color="#FF0000">*</font></string>
    <string name="mobile_number_star">Mobile Number <font color="#FF0000">*</font></string>
    <string name="subject">Subject <font color="#FF0000">*</font></string>
    <string name="message">Message <font color="#FF0000">*</font></string>
    <string name="document">Document</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="updated_name">Updated Name<font color="#FF0000">*</font></string>
    <string name="updated_name_regional_language">Updated Name Regional language<font color="#FF0000">*</font></string>
    <string name="identity_proof_">Identity Proof<font color="#FF0000">*</font></string>
    <string name="reason_to_update_name">Reason to update Name<font color="#FF0000">*</font></string>
    <string name="enter_revise_name">Enter Revise Name</string>
    <string name="select_identity_proof">Select Identity Proof</string>
    <string name="spelling_correction_in_name">Spelling Correction in Name</string>
    <string name="applicant_s_full_name">Applicant\'s Full Name<font fgcolor="#FF3D00">*</font></string>
    <string name="applicant_mobile_no">Applicant Mobile No<font fgcolor="#FF3D00">*</font></string>
    <string name="applicant_date_of_birth">Applicant Date Of Birth<font fgcolor="#FF3D00">*</font></string>
    <string name="name_of_applicants_father_mother_guardian">Name of Applicants Father/Mother/Guardian<font fgcolor="#FF3D00">*</font></string>
    <string name="photo">Photo<font fgcolor="#FF3D00">*</font></string>
    <string name="is_your_treating_hospital_in_other_state_district">Is your treating hospital in other State/District ?<font fgcolor="#FF3D00">*</font></string>
    <string name="hospital_name">Hospital Name<font fgcolor="#FF3D00">*</font></string>
    <string name="hospital_name_">Hospital Name</string>
    <string name="hospital_treating_district">Hospital Treating District<font fgcolor="#FF3D00">*</font></string>
    <string name="select_hospital_treating_state_uts">Select Hospital Treating State / UTs</string>
    <string name="hospital_treating_state_uts">Hospital Treating State / UTs<font fgcolor="#FF3D00">*</font></string>
    <string name="disability_type_start">Disability Type<font fgcolor="#FF3D00">*</font></string>
    <string name="disability_due_to_star">Disability Due To</string>
    <string name="disability_by_birth">Disability by Birth <font fgcolor="#FF3D00">*</font></string>
    <string name="disability_since_star">Disability Since<font fgcolor="#FF3D00">*</font></string>
    <string name="nature_of_document_for_address_proof">Nature of Document for Address Proof <font fgcolor="#FF3D00">*</font></string>
    <string name="proof_of_correspondence_address_star">Proof of Correspondence Address<font fgcolor="#FF3D00">*</font></string>
    <string name="address_star">Address<font fgcolor="#FF3D00">*</font></string>
    <string name="state_uts">State / UTs<font fgcolor="#FF3D00">*</font></string>
    <string name="district_star">District<font fgcolor="#FF3D00">*</font></string>
    <string name="city_sub_district_tehsil">City / Sub District / Tehsil <font fgcolor="#FF3D00">*</font></string>
    <string name="village_block">Village / Block</string>
    <string name="pincode">Pincode<font fgcolor="#FF3D00">*</font></string>
    <string name="do_you_have_aadhaar_card">Do you have Aadhaar card? <font fgcolor="#FF3D00">*</font></string>
    <string name="identity_proof_star">Identity Proof <font fgcolor="#FF3D00">*</font></string>
    <string name="aadhaar_no">Aadhaar No. <font fgcolor="#FF3D00">*</font></string>
    <string name="aadhaar_enrollment_number">Aadhaar Enrollment Number<font fgcolor="#FF3D00">*</font></string>
    <string name="upload_aadhaar_enrollment_slip">Upload Aadhaar Enrollment slip <font fgcolor="#FF3D00">*</font></string>
    <string name="upload_identity_proof">Upload Identity Proof <font fgcolor="#FF3D00">*</font></string>
    <string name="select_reason_to_update_aadhaar_number">Select Reason to update Aadhaar Number</string>
    <string name="current_date_of_birth">Current Date of Birth</string>
    <string name="note_kindly_update_your_personal_details">Note- Kindly update your personal details.</string>
    <string name="select_reason_to_update_date_of_birth">Select Reason to update Date of Birth</string>
    <string name="generate_otp">Generate OTP</string>
    <string name="enter_revised_email">Enter Revised Email</string>
    <string name="reason_to_surrender_card_">Reason to surrender card</string>
    <string name="reason_to_lost_card_card_not_received">Reason to Lost Card/Card Not Received</string>
    <string name="appeal_reason">Appeal Reason<font fgcolor="#FF3D00">*</font></string>
    <string name="appeal">Appeal</string>
    <string name="state_name">State Name<font fgcolor="#FF3D00">*</font></string>
    <string name="district_name">District Name<font fgcolor="#FF3D00">*</font></string>
    <string name="permanent_address">Permanent Address<font fgcolor="#FF3D00">*</font></string>
    <string name="upload_address_proof">Upload Address Proof<font fgcolor="#FF3D00">*</font></string>
    <string name="sub_district_name">Sub-District Name<font fgcolor="#FF3D00">*</font></string>
    <string name="pincode_">Pincode<font fgcolor="#FF3D00">*</font></string>
    <string name="confirm_">Confirm</string>
    <string name="apply_for_udid">Apply For UDID</string>
    <string name="i_have_never_obtained_any_disability_certificate_udid_card_issued_through_udid_portal_or_any_other_platform_means">I have never obtained any Disability Certificate/UDID Card issued through UDID Portal or any other platform/means.</string>
    <string name="i_do_not_have_disability_certificate_udid_card_issued_through_udid_portal_but_i_have_a_disability_certificate_issued_through_other_platform_means_for_example_physically_manually_issued_disability_certificate">I do not have Disability Certificate/UDID Card issued through UDID Portal but I have a disability certificate issued through other platform/means; for example, physically/manually issued disability certificate.</string>
    <string name="i_have_applied_for_disability_certificate_udid_card_but_my_udid_application_was_rejected">I have applied for Disability Certificate/UDID Card but my UDID Application was rejected.</string>
    <string name="i_have_obtained_disability_certificate_udid_card_but_require_a_new_udid_card_because">I have obtained Disability Certificate/UDID Card but require a new UDID Card because.</string>
    <string name="i_have_applied_for_disability_certificate_udid_card_but_my_udid_application_is_still_pending">I have applied for Disability Certificate/UDID Card but my UDID Application is still pending.</string>
</resources>