<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/dialog_box"
        android:layout_marginHorizontal="@dimen/dp_20">

        <TextView
            android:id="@+id/tvShowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/na"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_18" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginStart="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_20"
            android:gravity="center">
            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:paddingHorizontal="@dimen/dp_20"
                android:paddingVertical="@dimen/dp_5"
                android:background="@drawable/curve_stroke_thin_grey_all"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_18"/>
            <TextView
                android:id="@+id/tvConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_"
                android:layout_marginStart="@dimen/dp_20"
                android:background="@drawable/curve_fill_black"
                android:paddingHorizontal="@dimen/dp_15"
                android:paddingVertical="@dimen/dp_5"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>